--- a/templates/users.html
+++ b/templates/users.html
@@ -16,6 +16,9 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/users">View Users</a>
                 </li>
             </ul>
