--- a/templates/users.html
+++ b/templates/users.html
@@ -13,10 +13,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/register">Signup</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users">View Users</a>
