--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/static/script.js"></script>
+    <script src="/static/login.js"></script>
 </body>
 </html>
